specs on password and email

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-URL_PRODUCTS=http://challenge-api.luizalabs.com/api/product/
+export MAIL_DEVELOPMENT_URL=localhost
+export MAIL_DEVELOPMENT_PORT=1025
